# media.ai

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: code-comments-and-config.mdc  doc-sync.mdc  docs-html-only.mdc  frontend-shadcn-ui.mdc
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_video_pipeline_jobs_explicit.py  b7c8d9e0f1a2_add_clarification_sessions_explicit.py  (+2 more)
app/: __init__.py  application.py  run.py
app/api/: __init__.py  (+22 more)
config/: app.yaml
docs/: ARCHITECTURE.html  DEVELOPMENT_LOG.html  VIDEO_PIPELINE.html  index.html
scripts/: check_runtime.py  init_postgres_tables.py  run_alembic_upgrade.py  run_chat_e2e.py  run_compose.py  run_continuity_qa.py  run_video_demo.py  seed_novel.py  submit_storyboard.py  upsert_bible.py  validate_storyboard.py  video_demo_av_assert.py  video_demo_constants.py  video_demo_g2_runner.py  video_demo_g3_assert.py  video_demo_pipeline_runner.py  video_demo_step_runner.py
tests/: conftest.py  sse_parse_helper.py  test_api_embedder.py  test_bgm_upload.py  test_chat.py  test_chat_e2e_script.py  test_chat_graph.py  test_chat_provider_delta_stream.py  test_chat_stream_runner.py  test_clarification.py  test_clarification_brief.py  test_config_resolver.py  test_conversation_repository.py  test_conversations_api.py  test_creation_type.py  test_creative_plan_storyboard.py  test_creative_plans.py  test_database_feed_adapter.py  test_document_repository.py  test_embedder.py  test_ffmpeg_required_checker.py  test_idle_config_integration.py  test_ingestion.py  test_knowledge_api.py  test_langgraph_builder.py  test_mcp_client.py  test_mcp_tools.py  test_mcp_video_tools.py  test_message_artifacts.py  test_multi_turn_integration.py  test_neo4j_driver_singleton.py  test_openai_stream_parser.py  test_outline_gate.py  test_pipeline_blocking_reason_resolver.py  test_pipeline_job_stale_reconciler.py  test_postgres_engine_singleton.py  test_provider_health_checker.py  test_providers.py  test_retrieval.py  test_retrieval_enhancements.py  (+25 more)
(+498 files in other folders)
