[project]
name = "lanmo"
version = "0.1.0"
description = "FastAPI project managed by poetry"
authors = [
    {name = "lanmo",email = "lanmo@example.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[project.scripts]
lanmo = "app.run:run"

[tool.poetry]
packages = [{include = "app", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
