[project]
name = "lanmo"
version = "0.1.0"
description = "FastAPI project managed by poetry"
authors = [
    {name = "lanmo",email = "lanmo@example.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langgraph (>=1.2.8,<2.0.0)",
    "edge-tts (>=7.2.8,<8.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "python-docx (>=1.1.2,<2.0.0)"
]

[project.scripts]
lanmo = "app.run:run"

[tool.poetry]
packages = [{include = "app", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
